More residency page stuff

--- a/src/demo/2025_2/residency/🥚.html
+++ b/src/demo/2025_2/residency/🥚.html
@@ -1,7 +1,7 @@
 <style>
   body {
-    --main-color: #b69410;
-    color: #574209;
+    --main-color: #b68410;
+    color: #573909;
     background: #f3f2f0;
     font-family: sans-serif;
     font-size: 20px;
@@ -69,3 +69,32 @@
 <br style="clear: both" />
 
 <p>I cooked eggs</p>
+<div style="font-size: 40px; font-family: 'fira code'">
+  a * (b + c) = a*b + a*c
+</div>
+<a href="https://vezwork.github.io/polylab/src/demo/2024_07/rewrite.js"
+  >original rewrite code</a
+>
+
+<figure>
+  <img src="https://egraphs-good.github.io/assets/egraphs.svg" width="600" />
+  <figcaption>
+    image source:
+    <a href="https://egraphs-good.github.io/">egg: e-graphs good website</a>
+  </figcaption>
+</figure>
+
+<a href="https://vezwork.github.io/polylab/dist/demo/2024_08/e_graph">demo</a>
+<br />
+<a
+  href="https://raw.githubusercontent.com/vezwork/polylab/refs/heads/main/src/demo/2024_08/lib/builtins.ts"
+  >builtins</a
+>
+<br />I used parser combinators to create a lisp-y parser (with array and block
+literals), then did post processing on the lisp-y AST to add statements to the
+language.
+<br />
+later, I also made this
+<a href="https://vezwork.github.io/polylab/dist/demo/2024_10/lift_lang/"
+  >small REPL</a
+>
